--- a/sf_oopapp/src/styles/style.css
+++ b/sf_oopapp/src/styles/style.css
@@ -1,3 +1,9 @@
-#app-login-btn {
-  width: 160px;
+#app-login-btn, #app-exit-btn {
+  width: 100px;
 }
+
+#app-greeting {
+  margin-right: 40%;
+  color: beige;
+}
+
