--- a/sf_oopapp/src/templates/taskField.html
+++ b/sf_oopapp/src/templates/taskField.html
@@ -1,1 +1,15 @@
-<h1>Страница пользователя</h1>
+<div class="app-task-container">
+    <div class="backlog app-task-block">
+        <div class="block-name">Backlog</div>
+    </div>
+    <div class="ready app-task-block">
+        <div class="block-name">Ready</div>
+    </div>
+    <div class="in_progress app-task-block">
+        <div class="block-name">In progress</div>
+    </div>
+    <div class="finished app-task-block">
+        <div class="block-name">Finished</div>
+    </div>
+</div>
+
