--- a/sf_oopapp/src/styles/style.css
+++ b/sf_oopapp/src/styles/style.css
@@ -1,9 +1,98 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  position: relative;
+  
+}
+
 #app-login-btn, #app-exit-btn {
   width: 100px;
+  margin-right: 16px;
 }
 
 #app-greeting {
   margin-right: 40%;
   color: beige;
+  margin-bottom: 0;
 }
 
+.app-top-panel, #app-bottom-panel {
+  height: 55px;
+  background-color: #0067A3;
+  padding: 0px;
+  position: relative;
+  
+}
+
+.app-name {
+  font-family: 'Roboto', sans-serif;
+  font-size: 28px;
+  font-weight: 400;
+  color: #FFFFFF;
+  line-height: 1;
+  margin-left: 20px;
+  position: absolute;
+  bottom: 13px;
+  padding: 0px;
+}
+
+.container-fluid {
+  padding: 0px;
+    
+}
+
+.app-please {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.userBoard {
+  background: #0079BF;
+  width: 100%;
+  height: 100%;
+}
+
+
+.app-task-field {
+  max-width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  
+}
+
+#app-bottom-panel {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+
+
+.app-task-container {
+  display: flex;
+  justify-content: center;
+}
+
+.app-task-block {
+  width: 282px;
+  height: 50px;
+  background: #EBECF0;
+  margin-top: 20px;
+  border-radius: 10px;
+  margin-right: 24px;
+}
+
+.app-task-block:last-child {
+  margin-right: 0px;
+}
+
+.block-name {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+}
