--- a/sf_oopapp/src/templates/taskField.html
+++ b/sf_oopapp/src/templates/taskField.html
@@ -1,15 +1,22 @@
 <div class="app-task-container">
     <div class="backlog app-task-block">
-        <div class="block-name">Backlog</div>
+        <div class="block-name" id="backlog-name">Backlog</div>
+        <button class="app-task-addButton" id="addBacklogTask"><img src="../images/plus.png" alt="plus" class="plus-img"> Add card</button>
     </div>
     <div class="ready app-task-block">
         <div class="block-name">Ready</div>
+        <button class="app-task-addButton"><img src="../images/plus.png" alt="plus" class="plus-img"> Add card</button>
     </div>
     <div class="in_progress app-task-block">
         <div class="block-name">In progress</div>
+        <button class="app-task-addButton"><img src="../images/plus.png" alt="plus" class="plus-img"> Add card</button>
     </div>
     <div class="finished app-task-block">
         <div class="block-name">Finished</div>
+        <button class="app-task-addButton"><img src="../images/plus.png" alt="plus" class="plus-img"> Add card</button>
     </div>
 </div>
+
+
+
 
